# ApkUpgradeClient

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/epsit/apkupgradeclient/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bsdiff.c  bspatch.c  cn_epsit_apkupgradeclient_util_BatchUtil.h
app/src/main/java/cn/epsit/apkupgradeclient/: App.java  MainActivity.java
app/src/main/java/cn/epsit/apkupgradeclient/bean/: CheckResponse.java  IpResponse.java
app/src/main/java/cn/epsit/apkupgradeclient/net/: ApiEngine.java  ApiPublishService.java  ApiService.java  NetWorkInterceptor.java
app/src/main/java/cn/epsit/apkupgradeclient/util/: BatchUtil.java  VersionUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/epsit/apkupgradeclient/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
